--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -40,6 +40,8 @@
                         Update Information
                     </button>
                 </ul>
+
+
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
                      aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -52,22 +54,24 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form>
+                                <form action="/patient/updatePatient" method="POST">
                                     <div class="form-group">
                                         <label for="inputEmail1">New Email Address</label>
                                         <input type="email" class="form-control" id="inputEmail1"
-                                               aria-describedby="emailHelp" placeholder="Enter new email">
+                                               aria-describedby="emailHelp" placeholder="Enter new email" name="email">
+
                                         <small id="emailHelp" class="form-text text-muted">Make sure you have access
                                             to this email</small>
                                     </div>
+
                                     <div class="form-group">
                                         <label for="newRoom">New Room Assignment</label>
-                                        <input type="email" class="form-control" id="newRoom"
-                                               aria-describedby="emailHelp" placeholder="Enter New Room">
+                                        <input type="text" class="form-control" id="newRoom"
+                                               aria-describedby="emailHelp" placeholder="Enter New Room" name="room">
                                     </div>
                                     <div class="form-group">
                                         <label for="newCareTaker">Select New Caretaker</label>
-                                        <select class="form-control" id="newCareTaker">
+                                        <select class="form-control" id="newCareTaker" name="careTaker">
                                             <option>MAJ Vaden</option>
                                             <option>CPT Test</option>
                                             <option>Mr. Someone</option>
@@ -76,7 +80,7 @@
                                         </select>
                                     </div>
                                     <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" id="check">
+                                        <input type="checkbox" class="form-check-input" id="check" name="verified" value="true">
                                         <label class="form-check-label" for="check">I certify all information is
                                             correct</label>
                                     </div>
@@ -92,6 +96,8 @@
                 </div>
             </div>
             <div class="col">
+
+<!--                &#45;&#45;&#45;&#45; Daily Medications &#45;&#45;&#45;&#45;-->
 
                 <table class="table table-hover">
                     <h3>Daily Medications</h3>
