--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -39,3 +39,13 @@ img {
     position:relative;
 }
 
+.light-grey-bg {
+    background-color: lightgrey;
+}
+
+.scrollable-table {
+    height: calc(100vh / 3); /* Set each table to 1/3 of the viewport height */
+    overflow-y: auto; /* Enable vertical scrolling if content exceeds table height */
+    width: 100%; /* Span the entire width of the screen */
+}
+
