patientModel is now able to rsvp to events postent on the srupage and able to display those events on the patient page, going to implement the selfMedicalEvent for the patient to be able to track selfEvents

--- a/src/main/resources/templates/sru-events-page.html
+++ b/src/main/resources/templates/sru-events-page.html
@@ -38,7 +38,14 @@
                         <p class="card-text" th:text=" 'Contact Number' + ${event.getContactNumber}" ></p>
                         <p class="card-text" th:text="'Contact Email: ' + ${event.getContactEmail}" ></p>
                         <p class="card-text" th:text="${event.getDescription}" ></p>
-                        <a href="#" class="btn btn-success">RSVP to Event</a>
+
+                        <form th:action="@{/sru/addRsvpEvent}" method="POST">
+                            <input type="hidden" th:value="${event.getEventId}" name="eventId">
+                            <button type="submit" name="rsvp" class="btn btn-primary"
+                                    th:disabled="${#sets.contains(rsvpEventIds, event.getEventId)}"
+                            >RSVP
+                            </button>
+                        </form>
                     </div>
                     <div class="card-footer text-muted" th:text="'Event Date:' +  ${event.getDateOfEvent}">
 
