--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -8,7 +8,7 @@
 <main role="main">
     <section class="jumbotron text-center">
         <div class="container">
-            <h1 class="jumbotron-heading">Name Goes Here </h1>
+            <h1 class="jumbotron-heading" th:text=" ${patientModel.getFirstName} + ' '+ ${patientModel.getLastName} ">Name Goes Here </h1>
             <img th:if="${patientModel.hasProfileImage}" th:src="@{/patient/image}" alt="Person Photo" class="img-fluid rounded-circle" width="200px" height="200px">
             <img th:unless="${patientModel.hasProfileImage}" src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0?auto=format&fit=crop&q=80&w=3387&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                  alt="Person Photo" class="img-fluid rounded-circle" width="200px" height="200px">
@@ -38,66 +38,10 @@
                         Update Information
                     </button>
                 </ul>
-
-
-                <!-- Modal -->
-                <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-                     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                    <div class="modal-dialog modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form action="/patient/updatePatient" method="POST">
-                                    <div class="form-group">
-                                        <label for="inputEmail1">New Email Address</label>
-                                        <input type="email" class="form-control" id="inputEmail1"
-                                               aria-describedby="emailHelp" placeholder="Enter new email" name="email">
-
-                                        <small id="emailHelp" class="form-text text-muted">Make sure you have access
-                                            to this email</small>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="newRoom">New Room Assignment</label>
-                                        <input type="text" class="form-control" id="newRoom"
-                                               aria-describedby="emailHelp" placeholder="Enter New Room" name="room">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="newCareTaker">Select New Caretaker</label>
-                                        <select class="form-control" id="newCareTaker" name="careTaker">
-                                            <option>MAJ Vaden</option>
-                                            <option>CPT Test</option>
-                                            <option>Mr. Someone</option>
-                                            <option>LT Other</option>
-                                            <option>Mr. Test</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input" id="check" name="verified" value="true">
-                                        <label class="form-check-label" for="check">I certify all information is
-                                            correct</label>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
-                                </form>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="button" class="btn btn-primary">Save changes</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-            <div class="col" style="max-height: 500px; overflow-y: auto;">
+<!--             Daily Medications      -->
 
-<!--                &#45;&#45;&#45;&#45; Daily Medications &#45;&#45;&#45;&#45;-->
-
-
+            <div class="col">
                 <table class="table table-hover">
                     <h3>Daily Medications</h3>
                     <thead>
@@ -128,6 +72,8 @@
             </div>
         </div>
     </div>
+
+
     <hr>
 
     <!--    My medications Table-->
@@ -167,6 +113,48 @@
             </tr>
             </tbody>
         </table>
+    </div>
+
+    <!--    My RSVP Events-->
+
+    <div class="container">
+        <table class="table table-hover table-dark">
+            <thead>
+            <tr>
+                <th scope="col">My Events</th>
+
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="event : ${rsvpEvents}">
+                <th scope="row">
+                    <div class="card text-center">
+                        <div class="card-header" th:text="${event.getOrganizationHostingEvent}">
+                            Featured
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title" th:text="'Event Name: ' + ${event.getEventName}" ></h5>
+                            <p class="card-text" th:text="'POC: ' + ${event.getOrganizer}" ></p>
+                            <p class="card-text" th:text=" 'Contact Number' + ${event.getContactNumber}" ></p>
+                            <p class="card-text" th:text="'Contact Email: ' + ${event.getContactEmail}" ></p>
+                            <p class="card-text" th:text="${event.getDescription}" ></p>
+                        </div>
+                        <div class="card-footer text-muted" th:text="'Event Date:' +  ${event.getDateOfEvent}">
+
+                        </div>
+                    </div>
+                    <hr>
+                </th>
+            </tr>
+
+            </tbody>
+        </table>
+
+    </div>
+
+
+
+
 
         <!--New Meds Modal -->
 
@@ -227,87 +215,87 @@
             </div>
         </div>
 
-        <!--Edit Meds Modal -->
 
-        <div class="modal fade" id="medicationEditModal" tabindex="-1" role="dialog"
-             aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="modalHeader">Edit Medication </h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form action="/patient/editMedication" method="POST">
-                            <input type="hidden" name="medicationId" id="medicationUpdateIdInput" />
-                            <div class="form-group">
-                                <label for="dosage">New Dosage in Milligrams</label>
-                                <input name="dosage" type="text" class="form-control" placeholder="dosage">
-                            </div>
-                            <div class="form-group">
-                                <label for="quantity">New Medication Quantity</label>
-                                <input name="quantity" type="text" class="form-control"
-                                       placeholder="number of pills">
-                            </div>
-                            <div class="form-group">
-                                <label for="timesTaken">New Times Taken per Day</label>
-                                <select name="times" class="form-control">
-                                    <option>1</option>
-                                    <option>2</option>
-                                    <option>3</option>
-                                    <option>4</option>
-                                    <option>5</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <label>New Date Medication Issued</label>
-                                <input type="date" name="date" />
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button type="submit" class="btn btn-primary">Save changes</button>
-                            </div>
-                            <hr>
-                        </form>
-<!--                        <button type="button" class="btn btn-primary delete-medication" data-toggle="modal"-->
-<!--                                data-target="#confirmDeleteModal">Delete Medication</button>-->
-                    </div>
+    <!--Edit Meds Modal -->
+
+    <div class="modal fade" id="medicationEditModal" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalHeader">Edit Medication </h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
-
-                <!-- Delete Medication Confirmation Modal -->
-
-                <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog"
-                     aria-labelledby="confirmDeleteModal" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Deletion</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                Are you sure you want to delete this medication?
-                            </div>
-                            <div class="modal-footer">
-                                <form action="/patient/deleteMedication" method="POST">
-                                    <input type="hidden" name="medicationId"
-                                           value="${medication.getMedicationId}" />
-                                    <input type="hidden" name="medicationId" id="medicationIdDeleteInput2" />
-                                    <button type="button" class="btn btn-secondary"
-                                            data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-danger">Delete</button>
-                                </form>
-                            </div>
+                <div class="modal-body">
+                    <form action="/patient/editMedication" method="POST">
+                        <input type="hidden" name="medicationId" id="medicationUpdateIdInput" />
+                        <div class="form-group">
+                            <label for="dosage">New Dosage in Milligrams</label>
+                            <input name="dosage" type="text" class="form-control" placeholder="dosage">
                         </div>
-                    </div>
+                        <div class="form-group">
+                            <label for="quantity">New Medication Quantity</label>
+                            <input name="quantity" type="text" class="form-control"
+                                   placeholder="number of pills">
+                        </div>
+                        <div class="form-group">
+                            <label for="timesTaken">New Times Taken per Day</label>
+                            <select name="times" class="form-control">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label>New Date Medication Issued</label>
+                            <input type="date" name="date" />
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
+                        </div>
+                        <hr>
+                    </form>
+                    <!--                        <button type="button" class="btn btn-primary delete-medication" data-toggle="modal"-->
+                    <!--                                data-target="#confirmDeleteModal">Delete Medication</button>-->
                 </div>
-
             </div>
+
         </div>
     </div>
+    </div>
+
+    <!-- Delete Medication Confirmation Modal -->
+
+    <div class="modal fade" id="confirmDeleteModal" tabindex="-1" role="dialog"
+         aria-labelledby="confirmDeleteModal" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="confirmDeleteModalLabel">Confirm Deletion</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this medication?
+                </div>
+                <div class="modal-footer">
+                    <form action="/patient/deleteMedication" method="POST">
+                        <input type="hidden" name="medicationId"
+                               value="${medication.getMedicationId}" />
+                        <input type="hidden" name="medicationId" id="medicationIdDeleteInput2" />
+                        <button type="button" class="btn btn-secondary"
+                                data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Modal -->
@@ -335,6 +323,62 @@
         </div>
     </div>
 </main>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form action="/patient/updatePatient" method="POST">
+                    <div class="form-group">
+                        <label for="inputEmail1">New Email Address</label>
+                        <input type="email" class="form-control" id="inputEmail1"
+                               aria-describedby="emailHelp" placeholder="Enter new email" name="email">
+
+                        <small id="emailHelp" class="form-text text-muted">Make sure you have access
+                            to this email</small>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="newRoom">New Room Assignment</label>
+                        <input type="text" class="form-control" id="newRoom"
+                               aria-describedby="emailHelp" placeholder="Enter New Room" name="room">
+                    </div>
+                    <div class="form-group">
+                        <label for="newCareTaker">Select New Caretaker</label>
+                        <select class="form-control" id="newCareTaker" name="careTaker">
+                            <option>MAJ Vaden</option>
+                            <option>CPT Test</option>
+                            <option>Mr. Someone</option>
+                            <option>LT Other</option>
+                            <option>Mr. Test</option>
+                        </select>
+                    </div>
+                    <div class="form-check">
+                        <input type="checkbox" class="form-check-input" id="check" name="verified" value="true">
+                        <label class="form-check-label" for="check">I certify all information is
+                            correct</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+<div class="col" style="max-height: 500px; overflow-y: auto;">
+
 <div th:replace="~{layouts :: scripts}"></div>
 </body>
 
