commiting changes something broke and changed app not working jdbc error with SRULocation Model will go back to main to see if that is working"

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -24,6 +24,7 @@
         </div>
         <div class="col-md-6 right">
           <div class="input-box">
+              <a href="/medSignup">Signup as a caretaker</a>
             <header>Sign Up</header>
 
             <!-- Display username error if present -->
@@ -110,6 +111,10 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="form-container">
+
 </div>
 </body>
 </html>
